// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton Should match snapshot for clickable 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
  border: none;
  width: 24px;
  height: 24px;
  color: #ffffff;
  cursor: pointer;
  pointer-events: all;
  background: #3a44e9;
  background: linear-gradient(122deg,#3a44e9,#7038e3);
}

.emotion-0 > * {
  width: 20px;
  height: 20px;
}

<button
  class="emotion-0"
/>
`;

exports[`IconButton Should match snapshot for default 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
  border: none;
  width: 24px;
  height: 24px;
  color: #ffffff;
  cursor: default;
  pointer-events: none;
  background: #3a44e9;
  background: linear-gradient(122deg,#3a44e9,#7038e3);
}

.emotion-0 > * {
  width: 20px;
  height: 20px;
}

<span
  class="emotion-0"
/>
`;

exports[`IconButton Should match snapshot for with colors 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
  border: none;
  width: 24px;
  height: 24px;
  color: #ffffff;
  cursor: default;
  pointer-events: none;
  background: #3a44e9;
  background: linear-gradient(122deg,#3a44e9,#7038e3);
}

.emotion-2 > * {
  width: 20px;
  height: 20px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
  border: none;
  width: 24px;
  height: 24px;
  color: #5856d6;
  cursor: default;
  pointer-events: none;
  background: #ff418b;
  background: linear-gradient(to right,#ff418b,#ff3466);
}

.emotion-0 > * {
  width: 20px;
  height: 20px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
  border: none;
  width: 24px;
  height: 24px;
  color: #ced1e2;
  cursor: default;
  pointer-events: none;
  background: #23bcba;
  background: linear-gradient(135deg,#23bcba,#45e994);
}

.emotion-1 > * {
  width: 20px;
  height: 20px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
  border: none;
  width: 24px;
  height: 24px;
  color: #908eff;
  cursor: default;
  pointer-events: none;
  background: transparent;
}

.emotion-3 > * {
  width: 20px;
  height: 20px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
  border: none;
  width: 24px;
  height: 24px;
  color: #f1f2f8;
  cursor: default;
  pointer-events: none;
  background: #9890e3;
  background: linear-gradient(315deg,#9890e3,#b1f4cf);
}

.emotion-4 > * {
  width: 20px;
  height: 20px;
}

<div>
  <span
    class="emotion-0"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 32 32"
      width="24"
    >
      <path
        d="M16.003 24.01c-7.338 0-10.983-5.836-11.89-7.539a.974.974 0 0 1 .003-.927l-.003.005c.907-1.703 4.552-7.539 11.89-7.539s10.983 5.836 11.89 7.539a.974.974 0 0 1-.002.927l.003-.005c-.907 1.703-4.552 7.539-11.89 7.539zm.007-13.5a5.5 5.5 0 1 0 5.5 5.5 5.5 5.5 0 0 0-5.5-5.5zm0 9.001a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5z"
      />
    </svg>
  </span>
  <span
    class="emotion-1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 32 32"
      width="24"
    >
      <path
        d="M16.003 24.01c-7.338 0-10.983-5.836-11.89-7.539a.974.974 0 0 1 .003-.927l-.003.005c.907-1.703 4.552-7.539 11.89-7.539s10.983 5.836 11.89 7.539a.974.974 0 0 1-.002.927l.003-.005c-.907 1.703-4.552 7.539-11.89 7.539zm.007-13.5a5.5 5.5 0 1 0 5.5 5.5 5.5 5.5 0 0 0-5.5-5.5zm0 9.001a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5z"
      />
    </svg>
  </span>
  <span
    class="emotion-2"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 32 32"
      width="24"
    >
      <path
        d="M16.003 24.01c-7.338 0-10.983-5.836-11.89-7.539a.974.974 0 0 1 .003-.927l-.003.005c.907-1.703 4.552-7.539 11.89-7.539s10.983 5.836 11.89 7.539a.974.974 0 0 1-.002.927l.003-.005c-.907 1.703-4.552 7.539-11.89 7.539zm.007-13.5a5.5 5.5 0 1 0 5.5 5.5 5.5 5.5 0 0 0-5.5-5.5zm0 9.001a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5z"
      />
    </svg>
  </span>
  <span
    class="emotion-3"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 32 32"
      width="24"
    >
      <path
        d="M16.003 24.01c-7.338 0-10.983-5.836-11.89-7.539a.974.974 0 0 1 .003-.927l-.003.005c.907-1.703 4.552-7.539 11.89-7.539s10.983 5.836 11.89 7.539a.974.974 0 0 1-.002.927l.003-.005c-.907 1.703-4.552 7.539-11.89 7.539zm.007-13.5a5.5 5.5 0 1 0 5.5 5.5 5.5 5.5 0 0 0-5.5-5.5zm0 9.001a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5z"
      />
    </svg>
  </span>
  <span
    class="emotion-4"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 32 32"
      width="24"
    >
      <path
        d="M16.003 24.01c-7.338 0-10.983-5.836-11.89-7.539a.974.974 0 0 1 .003-.927l-.003.005c.907-1.703 4.552-7.539 11.89-7.539s10.983 5.836 11.89 7.539a.974.974 0 0 1-.002.927l.003-.005c-.907 1.703-4.552 7.539-11.89 7.539zm.007-13.5a5.5 5.5 0 1 0 5.5 5.5 5.5 5.5 0 0 0-5.5-5.5zm0 9.001a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5z"
      />
    </svg>
  </span>
</div>
`;

exports[`IconButton Should match snapshot for with icon 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  padding: 0;
  border: none;
  width: 24px;
  height: 24px;
  color: #ffffff;
  cursor: default;
  pointer-events: none;
  background: #3a44e9;
  background: linear-gradient(122deg,#3a44e9,#7038e3);
}

.emotion-0 > * {
  width: 20px;
  height: 20px;
}

<span
  class="emotion-0"
>
  <svg
    fill="currentColor"
    height="24"
    viewBox="0 0 32 32"
    width="24"
  >
    <path
      d="M16.003 24.01c-7.338 0-10.983-5.836-11.89-7.539a.974.974 0 0 1 .003-.927l-.003.005c.907-1.703 4.552-7.539 11.89-7.539s10.983 5.836 11.89 7.539a.974.974 0 0 1-.002.927l.003-.005c-.907 1.703-4.552 7.539-11.89 7.539zm.007-13.5a5.5 5.5 0 1 0 5.5 5.5 5.5 5.5 0 0 0-5.5-5.5zm0 9.001a3.5 3.5 0 1 1 3.5-3.5 3.5 3.5 0 0 1-3.5 3.5z"
    />
  </svg>
</span>
`;
